overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
 .App {
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
   display: grid;
   gap: 0.3rem;
   grid:
